--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_install:
   
 script:
 - fgt golint $(find . | grep .go$ )
-- $HOME/gopath/bin/goveralls -service=travis-ci github.com/brotherlogic/goserver
+- $HOME/gopath/bin/goveralls -service=travis-ci -ignore goserverapi.go github.com/brotherlogic/goserver
